@@ -2,6 +2,7 @@ Changelog for Babel.
 
 Babel 3.0.0-dev
 ==============
+- add &includeUnlinked property to BabelLinks, option to skip/include unlinked context
 - [#56] Emptying the MODX trash can corrupt values in modx_site_tmplvar_contentvalues
 - [#88] Skip unpublished contexts
 - [#82] Check for resourceId parameter before defaulting.
